--- a/ImpactMap/Views/Account/Login.cshtml
+++ b/ImpactMap/Views/Account/Login.cshtml
@@ -27,7 +27,7 @@
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                             </div>
                             <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
+                                <div class="col-md-10">
                                     <div class="checkbox">
                                         @Html.CheckBoxFor(m => m.RememberMe)
                                         @Html.LabelFor(m => m.RememberMe)
