--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -97,7 +97,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="button" id="submitButton" value="Create" class="btn btn-default" />
+                    <input type="button" id="submitButton" value="Create" class="button btn-default"/>
                 </div>
             </div>
             <br />
