Fixed glitch in sticky footer

--- a/ImpactMap/Views/Account/Login.cshtml
+++ b/ImpactMap/Views/Account/Login.cshtml
@@ -58,4 +58,12 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+        function setLoginHeight() {
+            $('.logincontainer').height = $(body).height();
+        }
+
+        $(setLoginHeight);
+    </script>
 }
