--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -1,13 +1,13 @@
 ﻿
 html {
   position: relative;
-  height: 100%;
+  min-height: 100%;
 }
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 10pt;
   margin-bottom: 130px;
-  height:100%;
+  
 }
 
 .checkbox{
@@ -17,7 +17,7 @@ body {
 
 .account {
     background-image: url(/Content/Images/loginbg.jpg);
-    min-height:750px;
+    min-height:100%;
 }
 
 a {
@@ -275,7 +275,6 @@ inputWLabel {
     padding: 15px;
     margin-left: 20px;
     width: 300px;
-    min-height:750px;
     background-color: rgba(12, 125, 139, 0.85);
 }
 
