--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -203,7 +203,7 @@
                 <h2>Projects - Here you can create and view your organization's projects.</h2>
             }
         }
-        <div class="addpadding">
+        <span class="addpadding">
             @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
 
             @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "button" })
@@ -251,7 +251,7 @@
                                 <td>
                                     @foreach (var thing in item.investmentsIn)
                                     {
-                                        <div class="moneydiv">$@Html.DisplayFor(modelItem => thing.amount)</div><br />
+                                        <span>$@Html.DisplayFor(modelItem => thing.amount)</span><br />
                                     }
                                 </td>
                                 <td>
