--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -38,18 +38,11 @@
                     <h1>ImpactMap</h1>
                 </div>
 
-@*<<<<<<< HEAD
-                @Html.ActionLink("ImpactMap", "Index", "Dashboard", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
-                </ul>
-=======*@
-                @*<div class="navbar-collapse collapse">
+                <div id="headerNotifs" class="navbar-collapse collapse">
+                    <ul id="headerUl">
 
-                    @Html.Partial("_Notifications")
-                </div>*@            
+                    </ul>
+                </div>            
             <div class="navbar-collapse collapse">
 
                 @Html.Partial("_LoginPartial")
@@ -89,3 +82,53 @@
     </footer>
 </body>
 </html>
+<script>
+    function getCurrEntity() {
+        $.ajax({
+            url: '/Entities/GetCurrEntity/',
+            type: 'get',
+            success: function (data) {
+                console.log(data);
+                //data.products.map(function (entity) {
+                //    console.log(entity.ID);
+                //    currEntityID = entity.ID;
+                xxx = data.ID;
+            }
+        });
+                }
+
+
+        function getReportNotifs(currEntityID) {
+            $.ajax({
+                url: '/Entities/GetReportNotifs/' + currEntityID + '/',
+                type: 'get',
+                success: function (data) {
+                    console.log("I should come after 2");
+                    var html = '';
+                    data.map(function (project) {
+                        //html += '<li>' + replayEvent.DisplayName + '<span data-id=' + replayEvent.Id + ' class="DeleteButton btn btn-primary">Delete</span></li>'
+                        html += '<li>' + project.name + '</li>'
+                    });
+                    $('#headerUl').html(html);
+                }
+            });
+        };
+
+        
+        //function initialize() {
+            
+        //    //getCurrEntity();
+        //    //var currEntityID = getCurrEntity();
+        //    //getReportNotifs(currEntityID);
+        //    var xxx;
+        //    console.log(xxx)
+        //    console.log("hello????")
+        //    getCurrEntity();
+        //    console.log(xxx);
+        //    getReportNotifs(xxx);
+    //}
+
+        //$(getReportNotifs(currEntityID));
+
+
+</script>
