--- a/ImpactMap/Views/Categories/Index.cshtml
+++ b/ImpactMap/Views/Categories/Index.cshtml
@@ -80,9 +80,9 @@
                             </td>
 
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                                @Html.ActionLink("Edit", "Edit", new { id = subItem.ID }) |
+                                @Html.ActionLink("Details", "Details", new { id = subItem.ID }) |
+                                @Html.ActionLink("Delete", "Delete", new { id = subItem.ID })
                             </td>
                         </tr>
                     }
