Pretty much finished categories I think, worked on Investments/Edit (which has some issues populating categories...), and also added cool tooltip stuff to Investments/Create, though the styling isn't good currently.

--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -55,8 +55,8 @@
     </div>
 }
 
-<div class="addpadding">
-    @Html.ActionLink("Return to Dashboard", "Index", "Dashboard")
+<div class="linkcontainer">
+    @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", null, new { @class = "link" })
 </div>
 
     </div>
