--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -15,7 +15,8 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @*Date field*@
             <div class="form-group">
-                @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["date"] })
+                @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["date"] }) 
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["date"]"></span>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
@@ -24,6 +25,7 @@
             @*Value field*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["amount"] })
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["amount"]"></span>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Investment.amount, new { htmlAttributes = new { @type = "number", @min = "0.01", @step = "0.01", @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Investment.amount, "", new { @class = "text-danger" })
@@ -33,6 +35,7 @@
             @*In Kind checkbox - Marks the donation as inKind*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.isInKind, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["inKind"] })
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["inKind"]"></span>
                 <div class="col-md-10">
                     <div class="checkbox">
                         @Html.EditorFor(model => model.Investment.isInKind)
@@ -44,6 +47,7 @@
             @*ProjectFrom dropdown populates based on current entity, sent in via the Entities/Create GET action*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["projectFrom"] })
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["projectFrom"]"></span>
                 <div class="col-md-10">
                     <select name="projectFrom_ID">
                         <option value="0">No Project Selected</option>
@@ -58,6 +62,7 @@
             @*EntityTo dropdown -- when this dropdown changes it sends its value to the javascript below to update the projectTo dropdown*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["entityTo"] })
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["entityTo"]"></span>
                 <div class="col-md-10">
                     <select name="entityTo_ID" id="recipientSelect">
                         @foreach (var entity in Model.Entities)
@@ -70,6 +75,7 @@
             @*ProjectTo dropdown populates based on the EntityTo selected above*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["projectTo"] })
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["projectTo"]"></span>
                 <div class="col-md-10">
                     <select name="projectTo_ID" id="ProjectToDropdown"></select>
                 </div>
@@ -77,6 +83,7 @@
             @*Categories list with checkboxes - populates using an ajax call (load_categories) below*@
             <div class="form-group">
                 <dd title=@ViewBag.Tooltips["categories"]>Investment Tags</dd>
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["categories"]"></span>
                 <div class="col-md-10">
                     <div id="CatList">
                         <ul></ul>
@@ -90,6 +97,7 @@
             @*Description input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["ivmDescription"] })
+                <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["ivmDescription"]"></span>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Investment.description, "", new { @class = "text-danger" })
@@ -190,5 +198,8 @@
         }
 
         $(initialize);
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
     </script>
 }
