--- a/ImpactMap/Views/Projects/Details.cshtml
+++ b/ImpactMap/Views/Projects/Details.cshtml
@@ -5,22 +5,24 @@
 }
 
 <div class="container">
-    <h2>@ViewBag.Title</h2>
+    <div class="pageInfo">
+        <h2>@ViewBag.Title</h2>
+
+        <div class="subNav">
+            <a href=@Url.Action("Edit", new { id = Model.ID })><i class="fa fa-pencil" aria-hidden="true" title="Edit"></i></a>
+            <a href=@Url.Action("Index", "Projects")><i class="fa fa-list-alt" aria-hidden="true" title="Projects List"></i></a>
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+        </div>
+
+
+    </div>
 
     <div>
         <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.name)
-            </dt>
-
+        <dl class="dl-horizontal projInfo">
             <dd>
-                @Html.DisplayFor(model => model.name)
+                <span class="projName">@Html.DisplayFor(model => model.name)</span>
             </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.description)
-            </dt>
 
             <dd>
                 @Html.DisplayFor(model => model.description)
@@ -119,9 +121,5 @@
 
 
 
-    <p class="addpadding">
-        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-        @Html.ActionLink("Project List", "Index", "Projects") |
-        @Html.ActionLink("Dashboard", "Index", "Dashboard")
-    </p>
-    </div>
+
+</div>
