--- a/ImpactMap/Views/Projects/Edit.cshtml
+++ b/ImpactMap/Views/Projects/Edit.cshtml
@@ -5,7 +5,17 @@
 }
 
 <div class="container">
-    <h2>@ViewBag.Title</h2>
+    <div class="pageInfo">
+        <h2>@ViewBag.Title</h2>
+
+        <div class="subNav">
+
+            <a href=@Url.Action("Index", "Projects")><i class="fa fa-list-alt" aria-hidden="true" title="Projects List"></i></a>
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+
+        </div>
+
+    </div>
 
     @using (Html.BeginForm())
     {
@@ -17,32 +27,28 @@
             @Html.HiddenFor(model => model.ID)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2", @title = ViewBag.Tooltips["name"] })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.name, htmlAttributes: new { @title = ViewBag.Tooltips["name"] })
+            
                     @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-                </div>
+               
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2", @title = ViewBag.Tooltips["projDescription"] })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
-                </div>
+                @Html.LabelFor(model => model.description, htmlAttributes: new {@title = ViewBag.Tooltips["projDescription"] })
+                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+              
             </div>
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
+                <div>
                     <input type="submit" value="Save" class="button" />
                 </div>
             </div>
         </div>
     }
 
-    <div class="addpadding">
-        @Html.ActionLink("Project List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
-    </div>
 
     </div>
 
